--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
                 {
                     "key": "Permissions-Policy",
                     "value": "geolocation=(), microphone=(), camera=()"
+                },
+                {
+                    "key": "Content-Security-Policy",
+                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.firebaseapp.com https://*.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: blob:; font-src 'self' data:; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com https://*.firebaseapp.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com;"
                 }
             ]
         }
